--- a/machine.html
+++ b/machine.html
@@ -104,7 +104,7 @@ riskmethods.</p>
 Learning background to build out WeWork's Machine Learning Platform. If you're
 ?...</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/jobs/1082596/candidates/new'>Jobs: ML (Machine Learning) and Backend Engineer ... - MTailor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/jobs/1082596/candidates/new'>Jobs: ML (Machine Learning) and Backend Engineer ... - MTailor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of ML (Machine Learning) and Backend Engineer at 
 MTailor.</p>
@@ -113,7 +113,7 @@ MTailor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -135,7 +135,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -169,7 +169,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -177,7 +177,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -240,7 +240,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -277,11 +277,11 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999692027295-machine-learning-engineer'>Pluralsight Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999692027295-machine-learning-engineer'>Pluralsight Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -346,7 +346,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -380,7 +380,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
+<h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -445,7 +445,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p>6 days ago ... Develop solutions using Machine Learning/Deep Learning and other advanced 
 technologies to solve a variety of problems; Translate user stories and business?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4341945002'>Job Application for Senior Machine Learning Infrastructure Engineer, Safety Product at Twitch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
